--- a/us/template/index.html
+++ b/us/template/index.html
@@ -213,7 +213,7 @@
                 </div>
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
-                        <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}}</p>
+                        <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}} </p>
                     </div>
                     <a class="d-flex flex-column justify-content-center text-decoration-none"
                         href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
@@ -230,7 +230,9 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <p class="text-dark mt-2 fs-4 fw-bold">{{user.club_name}}</p>
+                    <p class="text-dark mt-2 fs-4 fw-bold">{{user.club_name}} {% if user.scouted_by != '' %}
+                        <i class="bi bi-patch-check-fill text-primary"></i>
+                        {% endif %}</p>
                     <p class="text-secondary">District: {{user.district}}</p>
                     <p class="text-secondary">Locality: {{user.locality}}</p>
 
@@ -261,13 +263,43 @@
                     <textarea class="form-control" required name="feed" id="" cols="30" rows="5"
                         placeholder="Share a post"></textarea>
                     <div class="d-flex justify-content-around m-2 mt-4">
-                        <button class="btn btn-outline-primary"><i class="bi bi-image"></i> Photo</button>
-                        <button class="btn btn-outline-success"><i class="bi bi-play-btn-fill"></i> Video</button>
+                        
+                        
                         <button type="submit" class="btn btn-outline-warning"><i class="bi bi-send-fill"></i> Post</button>
                     </div>
                     </form>
+                    <div class="d-flex justify-content-evenly">
+                        <a href="{% url 'PostImage' %}"><button class="btn btn-outline-primary"><i class="bi bi-image"></i> Photo</button></a>
+                    <button class="btn btn-outline-success"><i class="bi bi-play-btn-fill"></i> Video</button>
+                    </div>
                 </div>
             </div>
+            {% for i in userimgfeeds %}
+            <div class="mt-4 border-top pt-4">
+                <div class="d-flex">
+                    <div class="feed-img">
+                        <img class="w-100 rounded-circle" src={{user.img.url}} alt="">
+                    </div>
+                    <div class="ms-2">
+                        <p class="fw-bold">
+                            {{user.club_name}}
+                        </p>
+
+                    </div>
+                </div>
+                <div class="w-100 mt-3">
+                    <img class="w-100"
+                        src="{{i.img}}"
+                        alt="">
+                </div>
+                <div class="mt-3">
+                    <p class="fw-bold">{{user.club_name}}
+                    <p>{{i.feed}}</p>
+                    </p>
+
+                </div>
+            </div>
+            {% endfor %}
             {% for i in userfeeds %}
             <div class="mt-4 border-top pt-4">
                 <div class="d-flex">
@@ -289,32 +321,7 @@
                 </div>
             </div>
             {% endfor %}
-            <div class="mt-4 border-top pt-4">
-                <div class="d-flex">
-                    <div class="feed-img">
-                        <img class="w-100 rounded-circle" src={{user.img.url}} alt="">
-                    </div>
-                    <div class="ms-2">
-                        <p class="fw-bold">
-                            {{user.club_name}}
-                        </p>
-
-                    </div>
-                </div>
-                <div class="w-100 mt-3">
-                    <img class="w-100"
-                        src="https://images.unsplash.com/photo-1589487391730-58f20eb2c308?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Nnx8fGVufDB8fHx8fA%3D%3D&w=1000&q=80"
-                        alt="">
-                </div>
-                <div class="mt-3">
-                    <p class="fw-bold">{{user.club_name}}
-                    <p>Retail giants like Reliance Retail, Aditya Birla Fashion & Retail, and Devyani International,
-                        among others, are on an offline expansion spree, but real estate is proving hard to come by,
-                        reports Livemint.</p>
-                    </p>
-
-                </div>
-            </div>
+            
 
 
         </div>
@@ -423,13 +430,43 @@
                     <textarea class="form-control" required name="feed" id="" cols="30" rows="5"
                         placeholder="Share a post"></textarea>
                     <div class="d-flex justify-content-around m-2 mt-4">
-                        <button class="btn btn-outline-primary"><i class="bi bi-image"></i> Photo</button>
-                        <button class="btn btn-outline-success"><i class="bi bi-play-btn-fill"></i> Video</button>
+                        
+                        
                         <button type="submit" class="btn btn-outline-warning"><i class="bi bi-send-fill"></i> Post</button>
                     </div>
                     </form>
+                    <div class="d-flex justify-content-evenly">
+                        <a href="{% url 'PostImage' %}"><button class="btn btn-outline-primary"><i class="bi bi-image"></i> Photo</button></a>
+                    <button class="btn btn-outline-success"><i class="bi bi-play-btn-fill"></i> Video</button>
+                    </div>
                 </div>
             </div>
+            {% for i in userimgfeeds %}
+            <div class="mt-4 border-top pt-4">
+                <div class="d-flex">
+                    <div class="feed-img">
+                        <img class="w-100 rounded-circle" src={{user.img.url}} alt="">
+                    </div>
+                    <div class="ms-2">
+                        <p class="fw-bold">
+                            {{user.first_name}} {{user.last_name}}
+                        </p>
+
+                    </div>
+                </div>
+                <div class="w-100 mt-3">
+                    <img class="w-100"
+                        src="{{i.img}}"
+                        alt="">
+                </div>
+                <div class="mt-3">
+                    <p class="fw-bold">{{user.first_name}} {{user.last_name}}
+                    <p>{{i.feed}}</p>
+                    </p>
+
+                </div>
+            </div>
+            {% endfor %}
             {% for i in userfeeds %}
             <div class="mt-4 border-top pt-4">
                 <div class="d-flex">
@@ -451,7 +488,7 @@
                 </div>
             </div>
             {% endfor %}
-            <div class="mt-4 border-top pt-4">
+            <!-- <div class="mt-4 border-top pt-4">
                 <div class="d-flex">
                     <div class="feed-img">
                         <img class="w-100 rounded-circle" src={{user.img.url}} alt="">
@@ -476,7 +513,7 @@
                     </p>
 
                 </div>
-            </div>
+            </div> -->
 
 
         </div>
@@ -653,13 +690,43 @@
                     <textarea class="form-control" required name="feed" id="" cols="30" rows="5"
                         placeholder="Share a post"></textarea>
                     <div class="d-flex justify-content-around m-2 mt-4">
-                        <button class="btn btn-outline-primary"><i class="bi bi-image"></i> Photo</button>
-                        <button class="btn btn-outline-success"><i class="bi bi-play-btn-fill"></i> Video</button>
+                        
+                        
                         <button type="submit" class="btn btn-outline-warning"><i class="bi bi-send-fill"></i> Post</button>
                     </div>
                     </form>
+                    <div class="d-flex justify-content-evenly">
+                        <a href="{% url 'PostImage' %}"><button class="btn btn-outline-primary"><i class="bi bi-image"></i> Photo</button></a>
+                    <button class="btn btn-outline-success"><i class="bi bi-play-btn-fill"></i> Video</button>
+                    </div>
                 </div>
             </div>
+            {% for i in userimgfeeds %}
+            <div class="mt-4 border-top pt-4">
+                <div class="d-flex">
+                    <div class="feed-img">
+                        <img class="w-100 rounded-circle" src={{user.img.url}} alt="">
+                    </div>
+                    <div class="ms-2">
+                        <p class="fw-bold">
+                            {{user.first_name}} {{user.last_name}}
+                        </p>
+
+                    </div>
+                </div>
+                <div class="w-100 mt-3">
+                    <img class="w-100"
+                        src="{{i.img}}"
+                        alt="">
+                </div>
+                <div class="mt-3">
+                    <p class="fw-bold">{{user.first_name}} {{user.last_name}}
+                    <p>{{i.feed}}</p>
+                    </p>
+
+                </div>
+            </div>
+            {% endfor %}
             {% for i in userfeeds %}
             <div class="mt-4 border-top pt-4">
                 <div class="d-flex">
@@ -681,32 +748,7 @@
                 </div>
             </div>
             {% endfor %}
-            <div class="mt-4 border-top pt-4">
-                <div class="d-flex">
-                    <div class="feed-img">
-                        <img class="w-100 rounded-circle" src={{user.img.url}} alt="">
-                    </div>
-                    <div class="ms-2">
-                        <p class="fw-bold">
-                            {{user.first_name}} {{user.last_name}}
-                        </p>
-
-                    </div>
-                </div>
-                <div class="w-100 mt-3">
-                    <img class="w-100"
-                        src="https://images.unsplash.com/photo-1589487391730-58f20eb2c308?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Nnx8fGVufDB8fHx8fA%3D%3D&w=1000&q=80"
-                        alt="">
-                </div>
-                <div class="mt-3">
-                    <p class="fw-bold">{{user.first_name}} {{user.last_name}}
-                    <p>Retail giants like Reliance Retail, Aditya Birla Fashion & Retail, and Devyani International,
-                        among others, are on an offline expansion spree, but real estate is proving hard to come by,
-                        reports Livemint.</p>
-                    </p>
-
-                </div>
-            </div>
+            
 
 
         </div>
