--- a/us/template/club-player.html
+++ b/us/template/club-player.html
@@ -51,6 +51,96 @@
         </div>
     </nav>
     <div class="d-flex flex-column align-items-center justify-content-center">
+        <h2 class="mt-5">Currently active contracts</h2>
+        {% for i in contractedPlayers %}
+        <script>console.log("{{ i.img }}")</script>
+        <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
+            <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
+                <div class="d-flex align-items-center">
+                    <div class="player-scout-img">
+                        <img class="w-100 rounded-circle" src={{i.img}} alt="">
+                    </div>
+                </div>
+                
+                <div class="ms-3 col-lg-5 col-12">
+                    <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
+                    <p class=""><b>District: </b>{{i.district}} </p>
+                    <p class=""><b>Locality </b>{{i.locality}}</p>
+                    <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
+                        {% if j < ability %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
+                    <p>Potential:{% with potential=i.player_potential %} {% for j in abilityRange %}
+                        {% if j < potential %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
+                </div>
+                
+                <div class="d-flex justify-content-lg-end justify-content-center w-100">
+                    <div class="d-flex align-items-center justify-content-center col-5">
+
+                        <p class="text-success"><i class="bi bi-check-circle-fill"></i> Waiting for player response</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        {% endfor %}
+        <h2 class="mt-5">Players send response</h2>
+        {% for i in nonContractedPlayers %}
+        <script>console.log("{{ i.img }}")</script>
+        <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
+            <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
+                <div class="d-flex align-items-center">
+                    <div class="player-scout-img">
+                        <img class="w-100 rounded-circle" src={{i.img}} alt="">
+                    </div>
+                </div>
+                
+                <div class="ms-3 col-lg-5 col-12">
+                    <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
+                    <p class=""><b>District: </b>{{i.district}} </p>
+                    <p class=""><b>Locality </b>{{i.locality}}</p>
+                    <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
+                        {% if j < ability %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
+                    <p>Potential:{% with potential=i.player_potential %} {% for j in abilityRange %}
+                        {% if j < potential %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
+                </div>
+                
+                <div class="d-flex justify-content-lg-end justify-content-center w-100">
+                    <div class="d-flex align-items-center justify-content-center col-5">
+                        
+                        <a href="{% url 'EditContractClub' i.id %}"><button class="btn btn-outline-primary">Negotiate Contract</button></a>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        {% endfor %}
         <h2 class="mt-5">Players that are interested in your club</h2>
         {% for i in interested_players %}
         <script>console.log("{{ i.img }}")</script>
@@ -66,8 +156,24 @@
                     <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
-                    <p class=""><b>Ability: </b><i class="bi bi-star-fill text-warning text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
-                    <p class=""><b>Potential: </b><i class="bi bi-star-fill text-warning text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
+                    <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
+                        {% if j < ability %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
+                    <p>Potential:{% with potential=i.player_potential %} {% for j in abilityRange %}
+                        {% if j < potential %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
                 </div>
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
@@ -94,13 +200,34 @@
                     <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
-                    <p class=""><b>Ability: </b><i class="bi bi-star-fill text-warning text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
-                    <p class=""><b>Potential: </b><i class="bi bi-star-fill text-warning text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
+                    <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
+                        {% if j < ability %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
+                    <p>Potential:{% with potential=i.player_potential %} {% for j in abilityRange %}
+                        {% if j < potential %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
                 </div>
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
                     <div class="d-flex align-items-center justify-content-center col-5">
-                        <a href="{% url 'ShortlistPlayer' i.id %}"><button class="btn btn-outline-primary">Offer Contract</button></a>
+                        {% for co in cont %}
+                        {% if co in shortlisted_players %}
+                        <p>Hi</p>
+                        {% endif %}
+                        {% endfor %}
+                        <a href="{% url 'Contract' i.id %}"><button class="btn btn-outline-primary">Offer Contract</button></a>
                     </div>
                 </div>
             </div>
