--- a/us/template/EditContractClub.html
+++ b/us/template/EditContractClub.html
@@ -151,30 +151,55 @@
                             <label for="wage">Appearance Fee</label>
                             <div class="input-group">
                                 <span class="input-group-text">₹</span>
-                                <input class="form-control shadow-none" type="number" name="wage" value={{i.wage}}>
+                                <input class="form-control shadow-none wage-input" type="number" name="wage" value={{i.wage}}>
                             </div>
                         </div>
                         <div class="d-flex flex-column w-100 mt-4">
                             <label for="fee">Signing on fee</label>
                             <div class="input-group">
                                 <span class="input-group-text">₹</span>
-                                <input class="form-control shadow-none" type="number" name="fee" value={{i.fees}}>
+                                <input class="form-control shadow-none wage-input" type="number" name="fee" value={{i.fees}}>
                             </div>
                         </div>
                         <div class="d-flex flex-column w-100 mt-4">
                             <label for="bonus">Bonus</label>
-                            <textarea name="bonus" class="form-control" id="" cols="30" rows="10">{{i.bonus}}</textarea>
+                            <textarea name="bonus" class="form-control wage-input" id="" cols="30" rows="10">{{i.bonus}}</textarea>
                             
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn mt-5 btn-success">Negotiate</button>
+                            <button type="submit" class="btn mt-5 btn-primary" id="negotiate-button" disabled>Negotiate</button>
                         </div>
                     </div>
                 </div>
-                {% endfor %}
+                
             </form>
+            <div class="d-flex justify-content-evenly mt-3">
+                <button class="btn btn-success" id="accept-button">Accept Contract</a></button>
+                <script>
+                    document.getElementById("accept-button").addEventListener("click", function() {
+                        var url = "{% url 'AcceptContractClub' i.player_id %}";
+                        window.location.href = url;
+                    });
+                    </script>
+                <a href="{% url 'RejectContractClub' i.player_id %}"><button class="btn btn-danger">Reject Contract</button></a>
+            </div>
+            {% endfor %}
+            
         </div>
     </div>
 </body>
 
 </html>
+<script>
+    const wageInputs = document.querySelectorAll('.wage-input');
+    const acceptButton = document.getElementById('accept-button');
+    const negotiateButton=document.getElementById('negotiate-button')
+
+    wageInputs.forEach(input => {
+        input.addEventListener('input', () => {
+            acceptButton.disabled = true; // Enable the button when any input changes
+            negotiateButton.disabled=false;
+        });
+        
+    });
+</script>
