--- a/us/template/player-club.html
+++ b/us/template/player-club.html
@@ -51,6 +51,31 @@
         </div>
     </nav>
     <div class="d-flex flex-column align-items-center justify-content-center">
+        <h2 class="mt-3">Contracts Finalised</h2>
+        {% for i in contractAccepted %}
+        <script>console.log("{{ i.img }}")</script>
+        <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
+            <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
+                <div class="d-flex align-items-center">
+                    <div class="player-scout-img">
+                        <img class="w-100 rounded-circle" src={{i.img}} alt="">
+                    </div>
+                </div>
+                
+                <div class="ms-3 col-lg-5 col-12">
+                    <p class="fs-2 fw-bold">{{i.club_name}}</p>
+                    <p class=""><b>District: </b>{{i.district}} </p>
+                    <p class=""><b>Locality </b>{{i.locality}}</p>
+                    <p class=""><b>Club Reputation: </b><i class="bi bi-star-fill text-warning text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
+                </div>
+                
+                <div class="d-flex justify-content-lg-end justify-content-center w-100">
+                    <p class="text-success"><i class="bi bi-check-circle-fill"></i> You both agreed on terms</p>
+                </div>
+            </div>
+            
+        </div>
+        {% endfor %}
         <h2 class="mt-3">Contract</h2>
         {% for i in contractedClubs %}
         <script>console.log("{{ i.img }}")</script>
