--- a/us/template/index.html
+++ b/us/template/index.html
@@ -453,7 +453,7 @@
                     <div class="d-flex justify-content-evenly">
                         <a href="{% url 'PostImage' %}"><button class="btn btn-outline-primary"><i class="bi bi-image"></i> Photo</button></a>
                         <a href="{% url 'tour' %}"><button class="btn btn-outline-danger"><i class="bi bi-trophy-fill"></i> Tournaments</button></a>
-                        <a href=""><button class="btn btn-outline-secondary"><i class="bi bi-file-check-fill"></i> Offer Trials</button></a>
+                        <a href="{% url 'trial' %}"><button class="btn btn-outline-secondary"><i class="bi bi-file-check-fill"></i> Offer Trials</button></a>
                     <a href="{% url 'PostVideo' %}"><button class="btn btn-outline-success"><i class="bi bi-play-btn-fill"></i> Video</button></a>
                     </div>
                 </div>
@@ -864,7 +864,10 @@
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'following_feeds' %}">Feeds</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'trial_list' %}">Trials</a>
+                        </li>
                     </ul>
                 </div>
                 
